SERVER-16822 Add ScopedTransactions to places which were missing it