src/mongo/db/commands/test_commands.cpp
@@ -204,6 +204,7 @@ namespace mongo {
         virtual bool run(OperationContext* txn, const string& dbname , BSONObj& cmdObj, int, string& errmsg, BSONObjBuilder& result, bool fromRepl) {
             const std::string ns = parseNsCollectionRequired(dbname, cmdObj);
 
+            ScopedTransaction scopedXact(txn, MODE_IX);
             AutoGetDb autoDb(txn, dbname, MODE_X);
 
             Database* db = autoDb.getDb();
